--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -7,6 +7,9 @@
             <h3>Hello Azer Khamassi</h3>
           </div>
           <div class="row">
+            <hr width="200px" />
+          </div>
+          <div class="row">
             <div class="form-group">
               <label class="label" for="email">Enter your total budget </label>
               <input type="number" class="form-control" id="budget" min="1" />
@@ -20,42 +23,46 @@
               <input type="number" class="form-control" id="budget" min="1" />
             </div>
           </div>
-          <div class="row radio-container">
-            <label class="label">Choose a range</label>
-            <div class="form-check">
-              <input
-                class="form-check-input"
-                type="radio"
-                name="exampleRadios"
-                id="exampleRadios1"
-                value="option1"
-                checked
-              />
-              <label class="form-check-label" for="exampleRadios1"> Low </label>
-            </div>
-            <div class="form-check">
-              <input
-                class="form-check-input"
-                type="radio"
-                name="exampleRadios"
-                id="exampleRadios2"
-                value="option2"
-              />
-              <label class="form-check-label" for="exampleRadios2">
-                Medium
-              </label>
-            </div>
-            <div class="form-check">
-              <input
-                class="form-check-input"
-                type="radio"
-                name="exampleRadios"
-                id="exampleRadios2"
-                value="option2"
-              />
-              <label class="form-check-label" for="exampleRadios2">
-                High
-              </label>
+          <div class="row">
+            <div class="col radio-container">
+              <label class="label">Choose a range</label>
+              <div class="form-check">
+                <input
+                  class="form-check-input"
+                  type="radio"
+                  name="exampleRadios"
+                  id="exampleRadios1"
+                  value="option1"
+                  checked
+                />
+                <label class="form-check-label" for="exampleRadios1">
+                  Low
+                </label>
+              </div>
+              <div class="form-check">
+                <input
+                  class="form-check-input"
+                  type="radio"
+                  name="exampleRadios"
+                  id="exampleRadios2"
+                  value="option2"
+                />
+                <label class="form-check-label" for="exampleRadios2">
+                  Medium
+                </label>
+              </div>
+              <div class="form-check">
+                <input
+                  class="form-check-input"
+                  type="radio"
+                  name="exampleRadios"
+                  id="exampleRadios2"
+                  value="option2"
+                />
+                <label class="form-check-label" for="exampleRadios2">
+                  High
+                </label>
+              </div>
             </div>
           </div>
         </div>
