--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -8,15 +8,15 @@
         <div class="col">
           <div class="form-group">
             <label class="label" for="email">Username or Email address</label>
-            <input type="email" class="form-control" id="email" />
+            <input type="email" class="form-control" [(ngModel)]="username" id="email" />
           </div>
           <div class="form-group">
             <label class="label" for="password">Password</label>
-            <input type="password" class="form-control" id="password" />
+            <input type="password" class="form-control" [(ngModel)]="password" id="password" />
           </div>
           <div class="row">
             <div class="col-md-12">
-              <button type="submit" class="btn btn-success signupBtn">
+              <button (click)=(login()) type="submit" class="btn btn-success signupBtn">
                 Sign in
               </button>
             </div>
