--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -9,14 +9,14 @@
           <div class="row">
             <div class="col-md-6">
               <div class="form-group">
-                <label class="label" for="email">First Name</label>
-                <input type="text" class="form-control" id="firstName" />
+                <label class="label" for="firstName">First Name</label>
+                <input type="text" class="form-control" [(ngModel)]="firstName" id="firstName" />
               </div>
             </div>
             <div class="col-md-6">
               <div class="form-group">
-                <label class="label" for="email">Last Name</label>
-                <input type="text" class="form-control" id="lastName" />
+                <label class="label" for="lastName">Last Name</label>
+                <input type="text" class="form-control" [(ngModel)]="lastName" id="lastName" />
               </div>
             </div>
           </div>
@@ -24,33 +24,59 @@
             <div class="col-md-6">
               <div class="form-group">
                 <label class="label" for="email">Email</label>
-                <input type="email" class="form-control" id="email" />
+                <input type="email" class="form-control" [(ngModel)]="email" id="email" />
               </div>
             </div>
             <div class="col-md-6">
               <div class="form-group">
-                <label class="label" for="email">Username</label>
-                <input type="email" class="form-control" id="email" />
+                <label class="label" for="username">Username</label>
+                <input type="email" class="form-control" [(ngModel)]="username" id="username" />
+              </div>
+            </div>
+          </div>
+             <div class="row">
+            <div class="col-md-6">
+              <div class="form-group">
+                 <label class="label" for="gender">Gender</label>
+                        <select class="form-control" [(ngModel)]="gender" name="gender">
+                            <option>MALE</option>
+                            <option>FEMALE</option>
+                            <option>OTHER</option>
+                        </select>
+              </div>
+            </div>
+            <div class="col-md-6">
+                  <div class="form-group">
+                <label class="label" for="phoneNumber">Phone Number</label>
+                <input type="text" class="form-control" [(ngModel)]="phoneNumber" id="phoneNumber" />
               </div>
             </div>
           </div>
           <div class="row">
             <div class="col-md-6">
               <div class="form-group">
-                <label class="label" for="email">Password</label>
-                <input type="password" class="form-control" id="password" />
+                <label class="label" for="password">Password</label>
+                <input type="password" class="form-control" [(ngModel)]="password" id="password" />
               </div>
             </div>
             <div class="col-md-6">
               <div class="form-group">
-                <label class="label" for="email">Re Password</label>
-                <input type="password" class="form-control" id="repassword" />
+                <label class="label" for="repassword">Re Password</label>
+                <input type="password" class="form-control" [(ngModel)]="repassword" id="repassword" />
+              </div>
+            </div>
+          </div>
+              <div class="row">
+            <div class="col-md-12">
+              <div class="form-group">
+                <label class="label" for="address">Address</label>
+                <input type="text" class="form-control" [(ngModel)]="address" id="address" />
               </div>
             </div>
           </div>
           <div class="row">
             <div class="col-md-12">
-              <button type="submit" class="btn btn-success signupBtn">
+              <button (click)=(register()) type="submit" class="btn btn-success signupBtn">
                 Sign in
               </button>
             </div>
