--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" routerLink="/">Trip T</a>
+  <a class="navbar-brand" routerLink="/">
+    <img src="../../../assets/img/tript.png" style="height: 90px;" />
+</a>
   <button
     class="navbar-toggler"
     type="button"
