--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -12,6 +12,9 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarCollapse">
     <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+        <li class="nav-item">
+        <a class="nav-link" style="color:red">{{user.username}}</a>
+      </li>
       <li class="nav-item">
         <a class="nav-link btn btn-success" routerLink="/login">Sign in</a>
       </li>
