--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -1,9 +1,12 @@
 .greeting-container {
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   padding-top: 20px;
   flex-direction: column;
   align-items: center;
+  box-shadow: 5px -5px 15px -5px #888;
+  z-index: 1;
+  min-height: 100vh;
 }
 .label {
   font-size: 12px;
