--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid" style="padding-top: 100px">
   <div class="row">
     <div class="col-md-4">
       <div class="row">
@@ -14,6 +14,9 @@
               <label class="label" for="email">Enter your total budget </label>
               <input type="number" class="form-control" id="budget" min="1" />
             </div>
+          </div>
+          <div class="row">
+            <hr width="200px" />
           </div>
           <div class="row">
             <div class="form-group">
@@ -56,14 +59,17 @@
                   class="form-check-input"
                   type="radio"
                   name="exampleRadios"
-                  id="exampleRadios2"
-                  value="option2"
+                  id="exampleRadios3"
+                  value="option3"
                 />
-                <label class="form-check-label" for="exampleRadios2">
+                <label class="form-check-label" for="exampleRadios3">
                   High
                 </label>
               </div>
             </div>
+          </div>
+          <div class="row">
+            <hr width="200px" />
           </div>
         </div>
       </div>
