--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,7 +1,7 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-light py-0 px-5 custom-nav">
   <a class="navbar-brand" routerLink="/">
-    <img src="../../../assets/img/tript.png" style="height: 90px;" />
-</a>
+    <img src="../../../assets/img/tript.png" style="height: 90px" />
+  </a>
   <button
     class="navbar-toggler"
     type="button"
@@ -11,16 +11,29 @@
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarCollapse">
-    <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
-        <li class="nav-item">
-        <a class="nav-link" style="color:red">{{user.username}}</a>
+    <ul class="navbar-nav ml-auto mt-2 mt-lg-0" *ngIf="user; else root">
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/profile">{{
+          user.username | titlecase
+        }}</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link btn btn-success" routerLink="/login">Sign in</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link btn btn-success" routerLink="/signup">Sign up</a>
+        <a class="nav-link" routerLink="/favorite">Favorite</a>
       </li>
     </ul>
+    <ng-template #root>
+      <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+        <li class="nav-item">
+          <a class="nav-link-btn btn btn-success" routerLink="/login"
+            >Sign in</a
+          >
+        </li>
+        <li class="nav-item">
+          <a class="nav-link-btn btn btn-success" routerLink="/signup"
+            >Sign up</a
+          >
+        </li>
+      </ul>
+    </ng-template>
   </div>
 </nav>
