--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid" style="padding-top: 150px">
+<div class="container-fluid" style="padding-top: 150px; min-height: 100vh">
   <div class="container">
     <div class="row flex-lg-nowrap">
       <div class="col">
