--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -4,7 +4,7 @@
       <div class="row">
         <div class="col greeting-container">
           <div class="row">
-            <h3>Hello Azer Khamassi</h3>
+            <h3 *ngIf="user">Hello {{ user.firstName | titlecase }}</h3>
           </div>
           <div class="row">
             <hr width="200px" />
@@ -70,6 +70,14 @@
           </div>
           <div class="row">
             <hr width="200px" />
+          </div>
+          <div class="row">
+            <div class="form-group">
+              <label class="label" for="email"
+                >Enter your accomodation budget
+              </label>
+              <input type="number" class="form-control" id="budget" min="1" />
+            </div>
           </div>
         </div>
       </div>
