--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -6,11 +6,14 @@
 }
 .cardContainer {
   padding: 20px;
-  border: 2px solid rgb(204, 204, 204);
-  border-radius: 5px;
+  border: 2px solid rgba(204, 204, 204, 0.151);
+  border-radius: 10px;
+  width: 40%;
+  box-shadow: inset rgba(255, 255, 255, 0.1) 0px 2px 0px,
+    inset rgba(255, 255, 255, 0.04) 0px 0px 0px 2px,
+    rgba(0, 0, 0, 0.25) 0px 2px 10px;
 }
-.titleContainer {
-  text-align: center;
+.title-container {
   display: flex;
   justify-content: center;
 }
@@ -19,4 +22,8 @@
 }
 .signupBtn {
   width: 100%;
+}
+.logo-container {
+  display: flex;
+  justify-content: center;
 }
