--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -20,6 +20,11 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="/favorite">Favorite</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" (click)="logout()" style="cursor: pointer"
+          >Logout</a
+        >
+      </li>
     </ul>
     <ng-template #root>
       <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
