--- a/src/app/components/signup/signup.component.css
+++ b/src/app/components/signup/signup.component.css
@@ -6,8 +6,10 @@
 }
 .cardContainer {
   padding: 20px;
-  border: 2px solid rgb(204, 204, 204);
-  border-radius: 5px;
+  border-radius: 10px;
+  box-shadow: inset rgba(255, 255, 255, 0.1) 0px 2px 0px,
+    inset rgba(255, 255, 255, 0.04) 0px 0px 0px 2px,
+    rgba(0, 0, 0, 0.25) 0px 2px 10px;
 }
 .titleContainer {
   text-align: center;
