adding root/home page

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,34 +1,22 @@
 <footer class="footer">
   <div class="container-fluid">
     <div class="row row-container">
-      <div class="col-md-6">Trip Tracker © 2021</div>
+      <div class="col-md-6">Trip Tracker © 2021 | All rights reserved</div>
       <div class="col-md-6">
         <div class="row">
           <div class="col">
             <a target="_blank" rel="noopener noreferrer">
-              <img
-                src="../../../assets/img/instagram.png"
-                style="height: 50px; cursor: pointer"
-                alt="Instagram"
-              />
+              <i class="fa fa-instagram" style="font-size: 40px"></i>
             </a>
           </div>
           <div class="col">
             <a target="_blank" rel="noopener noreferrer">
-              <img
-                src="../../../assets/img/facebook.png"
-                style="height: 50px; cursor: pointer"
-                alt="Instagram"
-              />
+              <i class="fa fa-facebook" style="font-size: 40px"></i>
             </a>
           </div>
           <div class="col">
             <a target="_blank" rel="noopener noreferrer">
-              <img
-                src="../../../assets/img/youtube.png"
-                style="height: 50px; cursor: pointer"
-                alt="Instagram"
-              />
+              <i class="fa fa-youtube" style="font-size: 40px"></i>
             </a>
           </div>
         </div>
