--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light py-0 px-5 custom-nav">
-  <a class="navbar-brand" routerLink="/">
+  <a class="navbar-brand" routerLink="/home">
     <img src="../../../assets/img/tript.png" style="height: 90px" />
   </a>
   <button
@@ -13,16 +13,18 @@
   <div class="collapse navbar-collapse" id="navbarCollapse">
     <ul class="navbar-nav ml-auto mt-2 mt-lg-0" *ngIf="user; else root">
       <li class="nav-item">
-        <a class="nav-link" routerLink="/profile">{{
-          user.username | titlecase
-        }}</a>
+        <a class="nav-link" routerLink="/profile">
+          <i class="fa fa-user"></i> {{ user.username | titlecase }}</a
+        >
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/favorite">Favorite</a>
+        <a class="nav-link" routerLink="/wishlist">
+          <i class="fa fa-heart"></i> Wishlist</a
+        >
       </li>
       <li class="nav-item">
-        <a class="nav-link" (click)="logout()" style="cursor: pointer"
-          >Logout</a
+        <a class="nav-link" (click)="logout()" style="cursor: pointer">
+          <i class="fa fa-sign-out"></i> Logout</a
         >
       </li>
     </ul>
