--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -2,5 +2,7 @@
   display: flex;
   align-items: center;
   padding: 20px 0 20px 0;
-  background-color: #f7f9ff !important;
+  box-shadow: inset rgba(255, 255, 255, 0.1) 0px 2px 0px,
+    inset rgba(255, 255, 255, 0.04) 0px 0px 0px 2px,
+    rgba(0, 0, 0, 0.25) 0px 2px 10px;
 }
