--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -12,7 +12,13 @@
           <div class="row">
             <div class="form-group">
               <label class="label" for="email">Enter your total budget </label>
-              <input type="number" class="form-control" id="budget" min="1" />
+              <input
+                type="number"
+                [(ngModel)]="budget"
+                class="form-control"
+                id="budget"
+                min="1"
+              />
             </div>
           </div>
           <div class="row">
@@ -20,13 +26,19 @@
           </div>
           <div class="row">
             <div class="form-group">
-              <label class="label" for="email"
-                >Enter your transport budget
+              <label class="label" for="days"
+                >Enter days you want to spend
               </label>
-              <input type="number" class="form-control" id="budget" min="1" />
+              <input
+                type="number"
+                [(ngModel)]="days"
+                class="form-control"
+                id="days"
+                min="1"
+              />
             </div>
           </div>
-          <div class="row">
+          <!-- <div class="row">
             <div class="col radio-container">
               <label class="label">Choose a range</label>
               <div class="form-check">
@@ -67,18 +79,45 @@
                 </label>
               </div>
             </div>
-          </div>
+          </div> -->
           <div class="row">
             <hr width="200px" />
           </div>
           <div class="row">
             <div class="form-group">
-              <label class="label" for="email"
-                >Enter your accomodation budget
-              </label>
-              <input type="number" class="form-control" id="budget" min="1" />
+              <label class="label" for="email">Select the currency </label>
+              <select
+                class="form-control"
+                [(ngModel)]="currency"
+                name="currency"
+                style="width: 100%"
+              >
+                <option value="TND">TND</option>
+                <option value="EUR">EUR</option>
+                <option value="GBP">GBP</option>
+                <option value="USD">USD</option>
+              </select>
             </div>
           </div>
+          <div class="row">
+            <hr width="200px" />
+          </div>
+          <div class="row">
+            <button
+              (click)="onGetSuggestion()"
+              class="btn btn-success btn-lg"
+              style="width: 100%"
+            >
+              <ngx-spinner
+                size="medium"
+                color="#fff"
+                type="ball-scale-multiple"
+              >
+              </ngx-spinner>
+              Search
+            </button>
+          </div>
+          <div class="row"></div>
         </div>
       </div>
     </div>
