--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -7,6 +7,7 @@
   box-shadow: 5px -5px 15px -5px #888;
   z-index: 1;
   min-height: 100vh;
+  min-height: calc(100vh - 80px);
 }
 .label {
   font-size: 12px;
@@ -16,4 +17,22 @@
   justify-content: center;
   align-items: flex-start;
   flex-direction: column;
+}
+.suggestion-card {
+  border-radius: 5px;
+  padding: 10px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  margin: 10px;
+  box-shadow: inset rgba(255, 255, 255, 0.1) 0px 2px 0px,
+    inset rgba(255, 255, 255, 0.04) 0px 0px 0px 2px,
+    rgba(0, 0, 0, 0.25) 0px 2px 8px;
+}
+.restaurant-container {
+  height: 300px;
+  overflow-y: scroll;
+  width: 100%;
+  margin-bottom: 20px;
 }
