--- a/src/app/user/components/navbar/navbar.component.html
+++ b/src/app/user/components/navbar/navbar.component.html
@@ -2,24 +2,48 @@
   <a class="navbar-brand" routerLink="/home">
     <img src="../../../assets/img/tript.png" style="height: 90px" />
   </a>
-  <button class="navbar-toggler" type="button" data-target="#navbarCollapse" data-toggle="collapse">
+  <button
+    class="navbar-toggler"
+    type="button"
+    data-target="#navbarCollapse"
+    data-toggle="collapse"
+  >
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarCollapse">
     <ul class="navbar-nav ml-auto mt-2 mt-lg-0" *ngIf="user">
       <li class="nav-item">
-        <a class="nav-link" routerLink="/user/profile">
-          <i class="fa fa-user"></i> {{ user.username | titlecase }}</a>
+        <a
+          class="nav-link"
+          routerLink="/user/bookings"
+          routerLinkActive="active-link"
+        >
+          <i class="fa fa-book"></i> Bookings</a
+        >
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/user/wishlist">
-          <i class="fa fa-heart"></i> Wishlist</a>
+        <a
+          class="nav-link"
+          routerLink="/user/favorite"
+          routerLinkActive="active-link"
+        >
+          <i class="fa fa-heart"></i> Wishlist</a
+        >
+      </li>
+      <li class="nav-item">
+        <a
+          class="nav-link"
+          routerLink="/user/settings"
+          routerLinkActive="active-link"
+        >
+          <i class="fa fa-user"></i> {{ user.username | titlecase }}</a
+        >
       </li>
       <li class="nav-item">
         <a class="nav-link" (click)="logout()" style="cursor: pointer">
-          <i class="fa fa-sign-out"></i> Logout</a>
+          <i class="fa fa-sign-out"></i> Logout</a
+        >
       </li>
     </ul>
-
   </div>
 </nav>
