--- a/src/app/auth/pages/signup/signup.component.html
+++ b/src/app/auth/pages/signup/signup.component.html
@@ -1,8 +1,13 @@
-<div class="container container-fluid" style="min-height: 100vh">
+<div
+  class="container container-fluid"
+  style="min-height: 100vh; padding-top: 100px"
+>
   <div class="row cardContainer">
     <div class="col">
-      <div class="row titleContainer">
-        <h2 class="title">Sign UP</h2>
+      <div class="row">
+        <div class="col logo-container">
+          <img src="../../../assets/img/tript.png" style="height: 150px" />
+        </div>
       </div>
       <div class="row">
         <div class="col">
