--- a/src/app/user/pages/home/home.component.css
+++ b/src/app/user/pages/home/home.component.css
@@ -37,3 +37,13 @@
   width: 100%;
   margin-bottom: 20px;
 }
+.buttons-container {
+  display: flex;
+  justify-content: space-around;
+  margin-bottom: 10px;
+  width: 100%;
+  align-items: center;
+}
+.btns {
+  padding: 5px 15px;
+}
