--- a/src/app/auth/pages/login/login.component.css
+++ b/src/app/auth/pages/login/login.component.css
@@ -22,6 +22,9 @@
 }
 .signupBtn {
   width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .logo-container {
   display: flex;
