--- a/src/app/user/pages/booking/booking.component.html
+++ b/src/app/user/pages/booking/booking.component.html
@@ -1,4 +1,60 @@
 <div
   class="container container-fluid"
   style="min-height: 100vh; padding-top: 120px"
-></div>
+>
+  <div class="" *ngIf="!loading">
+    <div class="row" *ngIf="suggestions.length > 0; else empty">
+      <div *ngFor="let suggestion of suggestions" class="col-md-4">
+        <div class="card" style="width: 18rem">
+          <div class="card-body">
+            <h6 class="card-title">{{ suggestion.id }}</h6>
+            <h5 class="card-subtitle mb-2 text-muted">
+              Arrival: {{ suggestion.flightOffer.arrivalCountry }}
+            </h5>
+            <p class="card-text">
+              Hotel {{ suggestion.hotelOffer.hotel.name }}
+            </p>
+            <p class="card-text">
+              Trip Fees:
+              {{ (suggestion.startingBudget - suggestion.rest).toFixed(2) }}
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <ng-template #empty>
+      <div class="row">
+        <div class="col-md-12">
+          <div class="row justify-content-center pt-5">
+            <img src="../../../assets/img/empty.svg" style="height: 90px" />
+          </div>
+          <div class="row justify-content-center">
+            <h3>You didn't book yet...</h3>
+          </div>
+        </div>
+      </div>
+    </ng-template>
+  </div>
+  <div class="" *ngIf="loading">
+    <div class="row">
+      <div class="col-md-4 mb-4" *ngFor="let i of [1, 2, 3, 4, 5, 6]">
+        <div class="card" style="width: 18rem">
+          <div class="card-body">
+            <h6 class="card-title">
+              <ngx-skeleton-loader count="1"></ngx-skeleton-loader>
+            </h6>
+            <h5 class="card-subtitle mb-2 text-muted">
+              <ngx-skeleton-loader count="1"></ngx-skeleton-loader>
+            </h5>
+            <p class="card-text">
+              <ngx-skeleton-loader count="1"></ngx-skeleton-loader>
+            </p>
+            <p class="card-text">
+              <ngx-skeleton-loader count="1"></ngx-skeleton-loader>
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
