--- a/src/app/user/pages/home/home.component.html
+++ b/src/app/user/pages/home/home.component.html
@@ -117,7 +117,7 @@
               Search
             </button>
           </div>
-          <div *ngIf="!loading" class="row">
+          <div *ngIf="!loading" class="row" style="width: 100%">
             <div class="col-md-12">
               <div class="row">
                 <hr width="200px" />
